# polysolvelib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  test_florp.yml
Docs/source/: conf.py  index.rst  usage.rst
polysolve/: solver.py
tests/: test_quadratic.py
